# ParamHelper

./: .gitignore  CMakeLists.txt  COPYING.md  FILESTRUCTURE.md  LICENSE.md  README.md  TODO.md  sonar-project.properties
.github/workflows/: ci.yml  sonarcloud.yml
app/: CMakeLists.txt  ParamHelper_app.cpp  manipulation.cpp  param_helper_examples.cpp  parameters.cpp  use_case.cpp  use_case_multiple_parameters.cpp
cmake/: paramhelperConfig.cmake.in
doc/: CMakeLists.txt  conf.py  index.rst
examples/: CMakeLists.txt  all_examples.cpp  manipulation.cpp  param_helper_examples.cpp  parameters.cpp  use_case.cpp  use_case_multiple_parameters.cpp
include/ParamHelper/: ParamHelper.hpp
include/param_helper/: fileos.hpp  filesystem.hpp  json.hpp  params.hpp  pathfinder.hpp  project.hpp
lib/: README.txt
src/: CMakeLists.txt  ParamHelper.cpp  filesystem.cpp  main.cpp  output  params.cpp  pathfinder.cpp  project.cpp
tests/: CMakeLists.txt  ParamHelper_t.cpp
